--- a/app/globals.css
+++ b/app/globals.css
@@ -74,3 +74,17 @@
     @apply bg-background text-foreground;
   }
 }
+
+@media print {
+  html,
+  body {
+    height: initial !important;
+    overflow: initial !important;
+    -webkit-print-color-adjust: exact;
+  }
+}
+
+@page {
+  size: auto;
+  margin: 20mm;
+}
