--- a/app/globals.css
+++ b/app/globals.css
@@ -75,6 +75,12 @@
   }
 }
 
+@media all {
+  .page-break {
+    display: none;
+  }
+}
+
 @media print {
   html,
   body {
@@ -84,6 +90,18 @@
   }
 }
 
+@media print {
+  .page-break {
+    margin-top: 1rem;
+    display: block;
+    /* page-break-before: always; */
+  }
+}
+@media print {
+  .pagebreak {
+    page-break-before: always;
+  } /* page-break-after works, as well */
+}
 @page {
   size: auto;
   margin: 20mm;
